feat: Add environment variable overrides for runtime configuration
This PR introduces a comprehensive system for overriding runtime constants via environment variables, enabling fine-grained control over execution limits, timeouts, and constraints without code modification.

## Changes

### Core Runtime Configuration System

**New File: `packages/agents-core/src/constants/runtime.ts`**
- Centralized all ~50 runtime constants into a single file
- Added `getEnvNumber()` helper for reading environment variables with fallback to defaults
- All constants now support `AGENTS_*` prefixed environment variable overrides
- Maintains backward compatibility - defaults unchanged

**Categories of configurable constants:**
- Agent Execution Loop (4 constants)
- Sub-Agent Turn Execution (3 constants)
- LLM Generation Timeouts (4 constants)
- Function Tool Sandbox (7 constants)
- MCP Tools (6 constants)
- Delegation & A2A Communication (8 constants)
- Artifact Processing (5 constants)
- Session Management (2 constants)
- Status Updates & Streaming (4 constants)
- Stream Buffers (6 constants)
- API Validation Limits (4 constants)
- Data Components & Conversation History (2 constants)

### Environment Variable Validation

**Updated: `agents-manage-api/src/env.ts`**
- Added Zod schema for 10 validation-related constants
- Validates environment overrides at startup
- Exports `runtimeConfig` object for consumption

**Updated: `agents-run-api/src/env.ts`**
- Added Zod schema for 46 runtime execution constants
- Validates environment overrides at startup
- Exports `runtimeConfig` object for consumption

### Documentation

**New: `agents-docs/content/docs/self-hosting/configure-runtime-limits.mdx`**
- Comprehensive guide on runtime configuration
- Concrete use case: "Long-Running Orchestration Agents"
- Explains configuration hierarchy (API vs environment limits)
- Links to related documentation (stopWhen, environment config)
- Embeds `.env.example` source directly using remark-source-code


--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,106 @@ DEFAULT_OAUTH_CLIENT_ID=mcp-client
 OAUTH_CLIENT_NAME=Inkeep Agent Framework
 OAUTH_CLIENT_URI=https://inkeep.com
 OAUTH_CLIENT_LOGO_URI=https://inkeep.com/images/logos/inkeep-logo-blue.svg
+
+# ============ RUNTIME CONFIGURATION ============
+# Optional environment variable overrides for runtime constants
+# All values shown are defaults. Only set if you need to change them.
+# For documentation on what each constant controls, see:
+# packages/agents-core/src/constants/runtime.ts
+
+# --- Agent Execution Loop ---
+# Controls transfers between sub-agents and error handling
+# AGENTS_AGENT_EXECUTION_TRANSFER_COUNT_MIN=1
+# AGENTS_AGENT_EXECUTION_TRANSFER_COUNT_MAX=1000
+# AGENTS_EXECUTION_TRANSFER_COUNT_DEFAULT=10
+# AGENTS_EXECUTION_MAX_CONSECUTIVE_ERRORS=3
+
+# --- Sub-Agent Turn Execution ---
+# Controls LLM generation steps within a single sub-agent turn
+# AGENTS_SUB_AGENT_TURN_GENERATION_STEPS_MIN=1
+# AGENTS_SUB_AGENT_TURN_GENERATION_STEPS_MAX=1000
+# AGENTS_SUB_AGENT_TURN_GENERATION_STEPS_DEFAULT=12
+
+# --- LLM Generation Timeouts ---
+# Timeouts for individual LLM API calls (in milliseconds)
+# AGENTS_LLM_GENERATION_FIRST_CALL_TIMEOUT_MS_STREAMING=270000
+# AGENTS_LLM_GENERATION_FIRST_CALL_TIMEOUT_MS_NON_STREAMING=90000
+# AGENTS_LLM_GENERATION_SUBSEQUENT_CALL_TIMEOUT_MS=90000
+# AGENTS_LLM_GENERATION_MAX_ALLOWED_TIMEOUT_MS=600000
+
+# --- Function Tool Sandbox ---
+# Limits for function tools running in isolated sandboxes
+# AGENTS_FUNCTION_TOOL_EXECUTION_TIMEOUT_MS_DEFAULT=30000
+# AGENTS_FUNCTION_TOOL_SANDBOX_VCPUS_DEFAULT=4
+# AGENTS_FUNCTION_TOOL_SANDBOX_POOL_TTL_MS=300000
+# AGENTS_FUNCTION_TOOL_SANDBOX_MAX_USE_COUNT=50
+# AGENTS_FUNCTION_TOOL_SANDBOX_MAX_OUTPUT_SIZE_BYTES=1048576
+# AGENTS_FUNCTION_TOOL_SANDBOX_QUEUE_WAIT_TIMEOUT_MS=30000
+# AGENTS_FUNCTION_TOOL_SANDBOX_CLEANUP_INTERVAL_MS=60000
+
+# --- MCP Tool Execution ---
+# Timeouts and connection settings for MCP (Model Context Protocol) tools
+# AGENTS_MCP_TOOL_REQUEST_TIMEOUT_MS_DEFAULT=60000
+# AGENTS_MCP_TOOL_CONNECTION_TIMEOUT_MS=3000
+# AGENTS_MCP_TOOL_MAX_RETRIES=3
+# AGENTS_MCP_TOOL_MAX_RECONNECTION_DELAY_MS=30000
+# AGENTS_MCP_TOOL_INITIAL_RECONNECTION_DELAY_MS=1000
+# AGENTS_MCP_TOOL_RECONNECTION_DELAY_GROWTH_FACTOR=1.5
+
+# --- Delegation Tool Execution ---
+# Controls retry/timeout for delegate_to_* tool calls
+# AGENTS_DELEGATION_TOOL_BACKOFF_INITIAL_INTERVAL_MS=100
+# AGENTS_DELEGATION_TOOL_BACKOFF_MAX_INTERVAL_MS=10000
+# AGENTS_DELEGATION_TOOL_BACKOFF_EXPONENT=2
+# AGENTS_DELEGATION_TOOL_BACKOFF_MAX_ELAPSED_TIME_MS=20000
+
+# --- Agent-to-Agent (A2A) Communication ---
+# Retry/backoff for general A2A HTTP communication
+# AGENTS_A2A_BACKOFF_INITIAL_INTERVAL_MS=500
+# AGENTS_A2A_BACKOFF_MAX_INTERVAL_MS=60000
+# AGENTS_A2A_BACKOFF_EXPONENT=1.5
+# AGENTS_A2A_BACKOFF_MAX_ELAPSED_TIME_MS=30000
+
+# --- Artifact Processing ---
+# Async artifact generation/processing (UI components)
+# AGENTS_ARTIFACT_GENERATION_MAX_RETRIES=3
+# AGENTS_ARTIFACT_SESSION_MAX_PENDING=100
+# AGENTS_ARTIFACT_SESSION_MAX_PREVIOUS_SUMMARIES=3
+# AGENTS_ARTIFACT_GENERATION_BACKOFF_INITIAL_MS=1000
+# AGENTS_ARTIFACT_GENERATION_BACKOFF_MAX_MS=10000
+
+# --- Session & Cache Management ---
+# Session state and tool result caching
+# AGENTS_SESSION_TOOL_RESULT_CACHE_TIMEOUT_MS=300000
+# AGENTS_SESSION_CLEANUP_INTERVAL_MS=60000
+
+# --- Status Updates & Streaming ---
+# Frequency and batching of status updates
+# AGENTS_STATUS_UPDATE_DEFAULT_NUM_EVENTS=1
+# AGENTS_STATUS_UPDATE_DEFAULT_INTERVAL_SECONDS=2
+# AGENTS_STATUS_UPDATE_MAX_NUM_EVENTS=100
+# AGENTS_STATUS_UPDATE_MAX_INTERVAL_SECONDS=600
+
+# --- Stream Buffer Limits ---
+# Memory and size limits for buffering streaming LLM responses
+# AGENTS_STREAM_PARSER_MAX_SNAPSHOT_SIZE=100
+# AGENTS_STREAM_PARSER_MAX_STREAMED_SIZE=1000
+# AGENTS_STREAM_PARSER_MAX_COLLECTED_PARTS=10000
+# AGENTS_STREAM_BUFFER_MAX_SIZE_BYTES=5242880
+# AGENTS_STREAM_TEXT_GAP_THRESHOLD_MS=2000
+# AGENTS_STREAM_MAX_LIFETIME_MS=600000
+
+# --- API Validation Limits ---
+# Hard limits enforced by manage-api validation schemas
+# AGENTS_VALIDATION_SUB_AGENT_PROMPT_MAX_CHARS=2000
+# AGENTS_VALIDATION_AGENT_PROMPT_MAX_CHARS=5000
+# AGENTS_VALIDATION_PAGINATION_MAX_LIMIT=100
+# AGENTS_VALIDATION_PAGINATION_DEFAULT_LIMIT=50
+
+# --- Data Component & Context Fetching ---
+# Limits for fetching external data during agent execution
+# AGENTS_DATA_COMPONENT_FETCH_TIMEOUT_MS_DEFAULT=10000
+
+# --- Conversation History ---
+# Limits for retrieving conversation history context
+# AGENTS_CONVERSATION_HISTORY_DEFAULT_LIMIT=50
