--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -93,6 +93,8 @@
     "recharts": "2.15.4",
     "remark-supersub": "^1.0.0",
     "sonner": "^2.0.6",
+    "shiki": "^3.13.0",
+    "@shikijs/monaco": "^3.13.0",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
