update env variable things

--- a/.env.example
+++ b/.env.example
@@ -67,3 +67,6 @@ DEFAULT_OAUTH_CLIENT_ID=mcp-client
 OAUTH_CLIENT_NAME=Inkeep Agent Framework
 OAUTH_CLIENT_URI=https://inkeep.com
 OAUTH_CLIENT_LOGO_URI=https://inkeep.com/images/logos/inkeep-logo-blue.svg
+
+# ========== SERVICE TOKENS ================
+INKEEP_AGENTS_JWT_SIGNING_SECRET=
