--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,6 +52,7 @@ services:
       - TURSO_DATABASE_URL
       - TURSO_AUTH_TOKEN
       - INKEEP_AGENTS_RUN_API_BYPASS_SECRET
+      - INKEEP_AGENTS_JWT_SIGNING_SECRET
       - ANTHROPIC_API_KEY
       - OPENAI_API_KEY
       - GOOGLE_GENERATIVE_AI_API_KEY
