--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -42,11 +42,6 @@
   },
   "dependencies": {
     "@ai-sdk/react": "2.0.11",
-    "@codemirror/autocomplete": "^6.19.0",
-    "@codemirror/lang-javascript": "^6.2.4",
-    "@codemirror/lang-json": "^6.0.2",
-    "@codemirror/lint": "^6.8.5",
-    "@codemirror/view": "^6.38.4",
     "@hookform/resolvers": "^5.2.1",
     "@inkeep/agents-core": "workspace:^",
     "@inkeep/agents-manage-api": "workspace:^",
@@ -72,8 +67,6 @@
     "@radix-ui/react-tooltip": "^1.2.7",
     "@sinclair/typebox": "^0.34.40",
     "@types/dagre": "^0.7.53",
-    "@uiw/codemirror-theme-duotone": "^4.25.1",
-    "@uiw/react-codemirror": "^4.25.1",
     "@xyflow/react": "^12.8.2",
     "axios": "^1.11.0",
     "axios-retry": "^4.5.0",
@@ -100,6 +93,8 @@
     "recharts": "2.15.4",
     "remark-supersub": "^1.0.0",
     "sonner": "^2.0.6",
+    "shiki": "^3.13.0",
+    "@shikijs/monaco": "^3.13.0",
     "streamdown": "^1.4.0",
     "tailwind-merge": "^3.3.1",
     "use-stick-to-bottom": "^1.1.1",
