feat: Implement render functionality for data components
- Added a new `render` property to data components, replacing the previous `preview` property.
- Updated related validation, data access, and schema files to accommodate the new render structure.
- Introduced new API routes for generating component renders.
- Refactored UI components to utilize the new render functionality.
- Updated tests to validate the new render behavior and ensure compatibility with existing features.

This change enhances the flexibility of data components by allowing for more complex rendering logic and improved data handling.

--- a/examples/tsconfig.json
+++ b/examples/tsconfig.json
@@ -16,7 +16,8 @@
       "@inkeep/agent-framework": ["../configuration/dist/index.js"],
       "@inkeep/agent-framework/*": ["../configuration/dist/*"],
       "@inkeep/agents-cli": ["../cli/dist/exports.js"],
-      "@inkeep/agents-cli/*": ["../cli/dist/*"]
+      "@inkeep/agents-cli/*": ["../cli/dist/*"],
+      "@schema": ["./activities-planner/data-components/activities/schema"]
     }
   },
   "exclude": ["node_modules", "dist"]
