--- a/examples/package.json
+++ b/examples/package.json
@@ -14,6 +14,7 @@
     "@inkeep/agents-manage-api": "workspace:*",
     "@inkeep/agents-run-api": "workspace:*",
     "@inkeep/agents-sdk": "workspace:*",
+    "lucide-react": "^0.546.0",
     "zod": "^4.1.11"
   },
   "devDependencies": {
