--- a/examples/package.json
+++ b/examples/package.json
@@ -20,6 +20,7 @@
   "devDependencies": {
     "@inkeep/agents-cli": "workspace:*",
     "@types/node": "^20.10.0",
+    "@types/react": "^19.0.0",
     "tsx": "^4.7.1",
     "typescript": "^5.9.2"
   },
