--- a/agents-docs/tsconfig.json
+++ b/agents-docs/tsconfig.json
@@ -15,7 +15,7 @@
     "jsx": "preserve",
     "incremental": true,
     "paths": {
-      "@/.source": ["./.source/index.ts"],
+      "@/.source": [".source"],
       "@/*": ["./src/*"]
     },
     "plugins": [
