--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -65,6 +65,9 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.7",
+    "@rjsf/core": "6.0.0-beta.22",
+    "@rjsf/shadcn": "6.0.0-beta.22",
+    "@rjsf/validator-ajv8": "6.0.0-beta.22",
     "@sinclair/typebox": "^0.34.40",
     "@types/dagre": "^0.7.53",
     "@xyflow/react": "^12.8.2",
