--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -37,10 +37,10 @@
     "hast-util-to-jsx-runtime": "^2.3.6",
     "lucide-react": "^0.503.0",
     "mermaid": "^11.12.0",
-    "next": "15.5.4",
+    "next": "16.0.0",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "19.2.0",
+    "react-dom": "19.2.0",
     "remark": "^15.0.1",
     "remark-emoji": "^5.0.1",
     "remark-gfm": "^4.0.1",
@@ -57,8 +57,8 @@
     "@tailwindcss/postcss": "^4.1.11",
     "@types/mdx": "^2.0.13",
     "@types/node": "24.0.7",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
+    "@types/react": "19.2.2",
+    "@types/react-dom": "19.2.2",
     "fast-glob": "^3.3.3",
     "next-validate-link": "^1.6.3",
     "postcss": "^8.5.6",
@@ -68,5 +68,11 @@
   },
   "engines": {
     "node": ">=22.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.2",
+      "@types/react-dom": "19.2.2"
+    }
   }
 }
