--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -106,6 +106,7 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
+    "@svgr/webpack": "^8.1.0",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
