--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -73,13 +73,13 @@ jobs:
           echo "Cleaning up any existing database files..."
           find . -name "*.db" -o -name "*.sqlite" | grep -v node_modules | xargs -r rm -f
       
-      # Run all CI checks in parallel with Turborepo
+      # Run all CI checks in parallel with Turborepo (excluding create-agents E2E tests)
       - name: Run CI checks
         id: ci-check
         run: |
           # Run all checks in parallel using Turborepo's dependency graph
-          # This will build once and cache, then run lint, typecheck, and test in parallel
-          pnpm check
+          # Exclude create-agents to run its E2E tests separately
+          pnpm --filter=!@inkeep/create-agents check
         env:
           TURBO_TELEMETRY_DISABLED: 1
           TURBO_CACHE_DIR: .turbo
@@ -92,7 +92,21 @@ jobs:
           NODE_OPTIONS: --max-old-space-size=4096
           CI: true
           HUSKY: 0
-      
+
+      # Run create-agents E2E tests separately (long-running)
+      - name: Run create-agents E2E Tests
+        id: create-agents-e2e
+        timeout-minutes: 30
+        run: |
+          echo "Running create-agents E2E tests..."
+          pnpm --filter @inkeep/create-agents test:e2e
+        env:
+          ENVIRONMENT: test
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY || 'sk-test-key-for-ci-testing' }}
+          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY || 'sk-ant-test-key-for-ci-testing' }}
+          CI: true
+          HUSKY: 0
+
       # Create summary report
       - name: Create CI Summary
         if: always()
@@ -110,4 +124,18 @@ jobs:
             echo "One or more checks failed. Review the logs above for details." >> $GITHUB_STEP_SUMMARY
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "Run \`pnpm check\` locally to reproduce the CI checks." >> $GITHUB_STEP_SUMMARY
+          fi
+
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "---" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+
+          if [ "${{ steps.create-agents-e2e.outcome }}" == "success" ]; then
+            echo "✅ **create-agents E2E tests passed!**" >> $GITHUB_STEP_SUMMARY
+          elif [ "${{ steps.create-agents-e2e.outcome }}" == "failure" ]; then
+            echo "❌ **create-agents E2E tests failed**" >> $GITHUB_STEP_SUMMARY
+            echo "" >> $GITHUB_STEP_SUMMARY
+            echo "Run \`pnpm --filter @inkeep/create-agents test:e2e\` locally to reproduce." >> $GITHUB_STEP_SUMMARY
+          else
+            echo "⏭️  **create-agents E2E tests skipped**" >> $GITHUB_STEP_SUMMARY
           fi
