--- a/packages/create-agents/package.json
+++ b/packages/create-agents/package.json
@@ -18,11 +18,12 @@
     "lint": "biome lint src",
     "lint:fix": "biome check --write .",
     "format": "biome format --write .",
-    "test": "vitest --run --passWithNoTests",
-    "test:watch": "vitest",
+    "test": "vitest --run src/__tests__ --exclude src/__tests__/e2e/** --passWithNoTests",
+    "test:watch": "vitest src/__tests__ --exclude src/__tests__/e2e/**",
     "test:unit": "vitest --run src/__tests__ --exclude src/__tests__/e2e/**",
     "test:e2e": "vitest --run src/__tests__/e2e",
     "test:e2e:watch": "vitest src/__tests__/e2e",
+    "test:all": "vitest --run --passWithNoTests",
     "typecheck": "tsc --noEmit"
   },
   "keywords": [
