--- a/.github/composite-actions/cypress-e2e/action.yml
+++ b/.github/composite-actions/cypress-e2e/action.yml
@@ -31,6 +31,8 @@ runs:
     - name: Start Backend API Server
       shell: bash
       run: npx turbo dev --filter='@inkeep/agents-manage-api' &
+      env:
+        INKEEP_AGENTS_JWT_SIGNING_SECRET: "01234567890123456789012345678901"
 
     - name: Build Dashboard
       shell: bash
