--- a/agents-docs/tsconfig.json
+++ b/agents-docs/tsconfig.json
@@ -41,7 +41,7 @@
     "content/docs/talk-to-your-agents/a2a.mdx",
     "content/docs/talk-to-your-agents/mcp-server.mdx",
     ".next/dev/types/**/*.ts"
-  ],
+, "scripts/generate-classnames.mjs"  ],
   "exclude": [
     "node_modules"
   ]
