--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -14,6 +14,8 @@
     "typecheck": "next typegen && tsc --noEmit",
     "postinstall": "fumadocs-mdx",
     "generate-openapi": "node scripts/generate-openapi-docs.mjs",
+    "generate-classnames": "node scripts/generate-classnames.mjs",
+    "prebuild": "pnpm generate-classnames",
     "validate-link": "node scripts/validate-link.mjs"
   },
   "dependencies": {
