--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -94,9 +94,14 @@ jobs:
       - name: Run Cypress E2E Tests
         uses: ./.github/composite-actions/cypress-e2e
         env:
+          TURBO_TELEMETRY_DISABLED: 1
+          TURBO_CACHE_DIR: .turbo
+          TURBO_TOKEN: ${{ secrets.TURBO_TOKEN }}
+          TURBO_TEAM: ${{ secrets.TURBO_TEAM }}
+          ENVIRONMENT: test
           OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY || 'sk-test-key-for-ci-testing' }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY || 'sk-ant-test-key-for-ci-testing' }}
-          INKEEP_AGENTS_JWT_SIGNING_SECRET: "01234567890123456789012345678901"
+          DB_FILE_NAME: test.db
 
       # Create summary report
       - name: Create CI Summary
