--- a/.github/composite-actions/cypress-e2e/action.yml
+++ b/.github/composite-actions/cypress-e2e/action.yml
@@ -14,6 +14,9 @@ inputs:
 runs:
   using: 'composite'
   steps:
+    - name: Generate JWT signing secret
+      run: echo "INKEEP_AGENTS_JWT_SIGNING_SECRET=$(openssl rand -hex 32)" >> $GITHUB_ENV
+
     - name: Setup Cypress cache
       uses: actions/cache@v4
       with:
