add ENVIRONMENT: test

--- a/.github/composite-actions/cypress-e2e/action.yml
+++ b/.github/composite-actions/cypress-e2e/action.yml
@@ -33,6 +33,7 @@ runs:
       run: npx turbo dev --filter='@inkeep/agents-manage-api' &
       env:
         INKEEP_AGENTS_JWT_SIGNING_SECRET: 22ffd51a7207291646251d518ea91df044a20a81a7e75c5b71e5e5e83da6055c
+        ENVIRONMENT: test
 
     - name: Build Dashboard
       shell: bash
@@ -43,6 +44,7 @@ runs:
       run: cd examples && npx inkeep push --project weather-project
       env:
         INKEEP_AGENTS_JWT_SIGNING_SECRET: 22ffd51a7207291646251d518ea91df044a20a81a7e75c5b71e5e5e83da6055c
+        ENVIRONMENT: test
 
     - name: Run Cypress E2E Tests
       shell: bash
