--- a/.github/composite-actions/cypress-e2e/action.yml
+++ b/.github/composite-actions/cypress-e2e/action.yml
@@ -25,8 +25,8 @@ runs:
       shell: bash
       run: cd agents-manage-ui && npx cypress install
 
-    - run: pnpm setup-dev
-      shell: bash
+#    - run: pnpm setup-dev
+#      shell: bash
 
     - name: Start Backend API Server
       shell: bash
