--- a/.env.example
+++ b/.env.example
@@ -69,4 +69,4 @@ OAUTH_CLIENT_URI=https://inkeep.com
 OAUTH_CLIENT_LOGO_URI=https://inkeep.com/images/logos/inkeep-logo-blue.svg
 
 # ========== SERVICE TOKENS ================
-INKEEP_AGENTS_JWT_SIGNING_SECRET=
+# INKEEP_AGENTS_JWT_SIGNING_SECRET=
