--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
     "node": ">=22.0.0"
   },
   "pnpm": {
-    "// esbuild": "we pin it for Cypruss",
+    "// esbuild": "we pin it for Cypress",
     "overrides": {
       "esbuild": "0.25.9",
       "zod": "^4.1.11"
