--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -68,6 +68,7 @@
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.10.0",
     "@vitest/coverage-v8": "^3.2.4",
+    "open": "^10.2.0",
     "pino-pretty": "^13.1.1",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2",
