--- a/agents-cli/package.json
+++ b/agents-cli/package.json
@@ -61,14 +61,14 @@
     "pino": "^9.11.0",
     "recast": "^0.23.0",
     "ts-morph": "^26.0.0",
-    "tsx": "^4.20.5"
+    "tsx": "^4.20.5",
+    "open": "^10.2.0"
   },
   "devDependencies": {
     "@types/degit": "^2.8.6",
     "@types/fs-extra": "^11.0.4",
     "@types/node": "^20.10.0",
     "@vitest/coverage-v8": "^3.2.4",
-    "open": "^10.2.0",
     "pino-pretty": "^13.1.1",
     "tsup": "^8.5.0",
     "typescript": "^5.9.2",
