--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -70,13 +70,8 @@
     "@radix-ui/react-switch": "^1.2.6",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.7",
-    "@rjsf/core": "6.0.0-beta.22",
-    "@rjsf/shadcn": "6.0.0-beta.22",
-    "@rjsf/utils": "6.0.0-beta.22",
-    "@rjsf/validator-ajv8": "6.0.0-beta.22",
     "@shikijs/monaco": "^3.13.0",
     "@sinclair/typebox": "^0.34.40",
-    "@types/dagre": "^0.7.53",
     "@xyflow/react": "^12.8.2",
     "ai": "^5.0.11",
     "axios": "^1.11.0",
@@ -117,7 +112,9 @@
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/dagre": "^0.7.53",
     "@types/node": "^20",
+    "@types/json-schema": "^7.0.15",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitest/coverage-v8": "^3.2.4",
