--- a/.env.example
+++ b/.env.example
@@ -21,7 +21,7 @@ LOG_LEVEL=info
 
 # ============ DATABASE ============
 # SQLite (default for local development)
-# Use the absolute path to db e.g `/Users/user/agents/local.db`. 
+# Use the absolute path to db e.g `file:/Users/user/agents/local.db`. 
 DB_FILE_NAME=
 
 # ============ API ENDPOINTS ============
