--- a/package.json
+++ b/package.json
@@ -85,7 +85,9 @@
     "node": ">=22.0.0"
   },
   "pnpm": {
+    "// esbuild": "we pin it for Cypress",
     "overrides": {
+      "esbuild": "0.25.9",
       "zod": "^4.1.11"
     },
     "patchedDependencies": {
