--- a/.changeset/config.json
+++ b/.changeset/config.json
@@ -7,5 +7,11 @@
   "access": "restricted",
   "baseBranch": "main",
   "updateInternalDependencies": "patch",
-  "ignore": ["@inkeep/examples", "@inkeep/agents-ui", "@inkeep/agents-docs"]
+  "ignore": [
+    "@inkeep/examples",
+    "@inkeep/agents-ui",
+    "@inkeep/agents-docs",
+    "@inkeep/create-agents-template",
+    "@inkeep/agents-cookbook"
+  ]
 }
