--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "lint:fix": "turbo lint:fix",
     "format": "biome format --write",
     "format:check": "biome format",
-    "typecheck": "turbo typecheck",
+    "typecheck": "turbo typecheck --filter='!agents-cookbook-templates'",
     "typecheck:watch": "turbo typecheck:watch",
     "precheck": "pnpm install --frozen-lockfile",
     "check": "turbo check",
