--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -66,6 +66,7 @@
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
+    "@radix-ui/react-radio-group": "^1.3.8",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
@@ -111,7 +112,6 @@
     "zustand": "^5.0.7"
   },
   "devDependencies": {
-    "start-server-and-test": "^2.1.2",
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.8.0",
     "@testing-library/react": "^16.3.0",
@@ -123,6 +123,7 @@
     "@vitest/web-worker": "3.1.4",
     "cypress": "^15.5.0",
     "jsdom": "^26.1.0",
+    "start-server-and-test": "^2.1.2",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.3.6",
