--- a/agents-cookbook/package.json
+++ b/agents-cookbook/package.json
@@ -1,6 +1,7 @@
 {
   "name": "agents-cookbook-templates",
   "version": "1.0.0",
+  "private": true,
   "description": "Template projects for the agents cookbook",
   "license": "MIT",
   "type": "module",
