--- a/agents-manage-ui/package.json
+++ b/agents-manage-ui/package.json
@@ -94,6 +94,7 @@
     "pino": "^9.9.0",
     "pino-pretty": "^13.1.1",
     "react": "19.1.1",
+    "react-colorful": "^5.6.1",
     "react-day-picker": "^9.9.0",
     "react-dom": "19.1.1",
     "react-error-boundary": "^6.0.0",
