run `pnpm format:check` in CI workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,6 +90,9 @@ jobs:
           CI: true
           HUSKY: 0
 
+      - name: Biome Format
+        run: pnpm format:check
+
       # Create summary report
       - name: Create CI Summary
         if: always()
