--- a/biome.json
+++ b/biome.json
@@ -8,9 +8,9 @@
     }
   },
   "vcs": {
-    "enabled": false,
+    "enabled": true,
     "clientKind": "git",
-    "useIgnoreFile": false
+    "useIgnoreFile": true
   },
   "files": {
     "ignoreUnknown": false
@@ -77,18 +77,6 @@
   },
   "formatter": {
     "enabled": true,
-    "includes": [
-      "**",
-      "!**/node_modules/**",
-      "!**/coverage/**",
-      "!**/dist/**",
-      "!**/drizzle/**",
-      "!**/drizzle.config.*",
-      "!**/.next/**",
-      "!**/build/**",
-      "!**/out/**",
-      "!**/.vercel/**"
-    ],
     "lineWidth": 100,
     "indentStyle": "space",
     "indentWidth": 2
