run `biome check --linter-enabled=false` on CI to check unsorted imports for example

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -93,6 +93,9 @@ jobs:
       - name: Biome Format
         run: pnpm format:check
 
+      - name: Biome Check
+        run: pnpm biome:check
+
       # Create summary report
       - name: Create CI Summary
         if: always()
