--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "precheck": "pnpm install --frozen-lockfile",
     "check": "turbo check --filter='!agents-cookbook-templates'",
     "check:husky": "turbo check:husky --filter='!agents-cookbook-templates'",
+    "biome:check": "biome check --linter-enabled=false",
     "check:fix": "biome check --write",
     "clean": "pnpm -r --parallel exec rm -rf node_modules dist build .next .turbo",
     "clean:turbo": "turbo clean",
