--- a/package.json
+++ b/package.json
@@ -26,14 +26,13 @@
     "coverage:check": "pnpm coverage:diff && pnpm coverage:enforce",
     "lint": "turbo lint --filter='!agents-cookbook-templates'",
     "lint:fix": "turbo lint:fix --filter='!agents-cookbook-templates'",
-    "format": "biome format --write",
-    "format:check": "biome format",
+    "format": "biome format --write && biome check --linter-enabled=false --write",
+    "format:check": "biome format && biome check --linter-enabled=false",
     "typecheck": "turbo typecheck --filter='!agents-cookbook-templates'",
     "typecheck:watch": "turbo typecheck:watch",
     "precheck": "pnpm install --frozen-lockfile",
     "check": "turbo check --filter='!agents-cookbook-templates'",
     "check:husky": "turbo check:husky --filter='!agents-cookbook-templates'",
-    "biome:check": "biome check --linter-enabled=false",
     "check:fix": "biome check --write",
     "clean": "pnpm -r --parallel exec rm -rf node_modules dist build .next .turbo",
     "clean:turbo": "turbo clean",
