--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "coverage:check": "pnpm coverage:diff && pnpm coverage:enforce",
     "lint": "turbo lint --filter='!agents-cookbook-templates'",
     "lint:fix": "turbo lint:fix --filter='!agents-cookbook-templates'",
-    "format": "biome format --write && biome check --linter-enabled=false --write",
-    "format:check": "biome format && biome check --linter-enabled=false",
+    "format": "pnpm format:check --write",
+    "format:check": "biome check --linter-enabled=false",
     "typecheck": "turbo typecheck --filter='!agents-cookbook-templates'",
     "typecheck:watch": "turbo typecheck:watch",
     "precheck": "pnpm install --frozen-lockfile",
