run `biome check --linter-enabled=false` on CI to check unsorted imports too (#892)
* sort import with `biome check --write`

* run `biome check --linter-enabled=false` on CI to check unsorted imports for example

* improve

* improve

* use just `biome format`

---------

Co-authored-by: robert-inkeep <123133375+robert-inkeep@users.noreply.github.com>

--- a/package.json
+++ b/package.json
@@ -26,8 +26,8 @@
     "coverage:check": "pnpm coverage:diff && pnpm coverage:enforce",
     "lint": "turbo lint --filter='!agents-cookbook-templates'",
     "lint:fix": "turbo lint:fix --filter='!agents-cookbook-templates'",
-    "format": "biome format --write",
-    "format:check": "biome format",
+    "format": "pnpm format:check --write",
+    "format:check": "biome check --linter-enabled=false",
     "typecheck": "turbo typecheck --filter='!agents-cookbook-templates'",
     "typecheck:watch": "turbo typecheck:watch",
     "precheck": "pnpm install --frozen-lockfile",
