--- a/agents-manage-api/package.json
+++ b/agents-manage-api/package.json
@@ -20,12 +20,16 @@
     "typecheck:watch": "tsc --noEmit --watch"
   },
   "dependencies": {
+    "@ai-sdk/anthropic": "^1.1.9",
+    "@ai-sdk/google": "^1.0.22",
+    "@ai-sdk/openai": "^1.0.19",
     "@hono/node-server": "^1.14.3",
     "@hono/swagger-ui": "^0.5.1",
     "@hono/zod-openapi": "^1.0.2",
     "@inkeep/agents-core": "workspace:^",
     "@nangohq/node": "^0.69.5",
     "@nangohq/types": "^0.69.5",
+    "ai": "^4.1.11",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.4",
     "hono": "^4.9.7",
