--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -70,5 +70,11 @@
   },
   "engines": {
     "node": ">=22.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.2.2",
+      "@types/react-dom": "19.2.2"
+    }
   }
 }
