--- a/create-agents-template/docker-compose.db.yml
+++ b/create-agents-template/docker-compose.db.yml
@@ -1,6 +1,7 @@
+version: "3.9"
 services:
   db:
-    image: postgres:16
+    image: postgres:18
     restart: unless-stopped
     environment:
       POSTGRES_DB: inkeep_agents
