--- a/agents-docs/package.json
+++ b/agents-docs/package.json
@@ -31,11 +31,11 @@
     "@shikijs/langs": "^3.3.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "fumadocs-core": "16.0.2",
-    "fumadocs-mdx": "13.0.0",
+    "fumadocs-core": "^16.0.7",
+    "fumadocs-mdx": "^13.0.0",
     "fumadocs-openapi": "^9.6.2",
     "fumadocs-typescript": "^4.0.12",
-    "fumadocs-ui": "16.0.2",
+    "fumadocs-ui": "^16.0.7",
     "hast-util-to-jsx-runtime": "^2.3.6",
     "lucide-react": "^0.503.0",
     "mermaid": "^11.12.0",
